# flow-viz-mcp

./: .gitignore  AGENT.md  ARCHITECTURE.md  GEMINI.md  README.md  interactive_cli.py  pyproject.toml  run_client.py  run_server.py  run_server_http.py  summary_test.txt
docs/: DESIGN_FINALIZED.md  DPM_CORRECTIONS.md  FILTERING_GUIDE.md  GEMINI_INTEGRATION.md  INTEGRATION_GUIDE.md  TODO.md  prompt.json  request.md  v1_plan.md  v1_spec.md  v2_plan.md  v2_spec.md  workflow_structure.md
input/analysis_data_save/: 1kg_WFG_original_workflow_data.csv  1kg_WFG_processed_workflow_data.csv  1kg_original_workflow_data.csv  1kg_processed_workflow_data.csv  1kg_spm_results.json  ddmd_4n_l_original_workflow_data.csv  ddmd_4n_l_processed_workflow_data.csv  ddmd_4n_l_spm_results.json  debug_staging_output.csv  fix_workflow_data.py  pyflex_240f_original_workflow_data.csv  pyflex_240f_processed_workflow_data.csv  pyflex_240f_spm_results.json  pyflex_240f_workflow_data_fixed_template.csv
input/cp_data/: PFS_to_SSD_16n_R.err  PFS_to_SSD_16n_R.out  PFS_to_SSD_1n_R.err  PFS_to_SSD_1n_R.out  PFS_to_SSD_2n_R.err  PFS_to_SSD_2n_R.out  PFS_to_SSD_32n_R.out  PFS_to_SSD_4n_R.out  PFS_to_SSD_8n_R.out  PFS_to_tmpfs_16n_R.out  PFS_to_tmpfs_1n_R.err  PFS_to_tmpfs_1n_R.out  PFS_to_tmpfs_2n_R.out  PFS_to_tmpfs_32n_R.err  PFS_to_tmpfs_32n_R.out  PFS_to_tmpfs_4n_R.out  (+19 more)
sessions/: cursor-nov-4-2025.txt  gemini-nov-3-2025.txt  gemini-nov-4-2025.txt  gemini-nov-5-2025.txt  gemini-nov-6-2025.txt
src/: README.md
tests/: test_builder.py  test_gcpa.py  test_parser.py  test_sankey.py  test_stats.py
(+11309 files in other folders)
