[project]
name = "dfl-mcp"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "networkx",
    "fastmcp",
    "matplotlib",
    "pydot",
    "pandas",
    "plotly",
    "fastapi",
    "uvicorn[standard]",
    "sse-starlette",
]

[project.scripts]
dfl-mcp-server = "run_server:main"
dfl-mcp-server-http = "run_server_http:main"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
